<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tinyxml_vendor</name>
  <version>0.8.3</version>
  <description>CMake shim over the tinxml library.</description>

  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>

  <license>Apache License 2.0</license>

  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author email="steven@openrobotics.org">Steven! Ragnarök</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tinyxml</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
